@@ -1,6 +1,8 @@
 [1.5]
 Fixed weird docking windows behavior when floating.
 Fixed crash when opening a mesh that didn't contain index data.
+Light's Power Spin control now works.
+Light's direction normalize buttons wasn't working. Fixed.
 
 [1.4]
 Added ability to take screenshots with F12 key. They're saved in the documents folder.
